your hurt izza mussel

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <meta charset="utf-8">
 
-<title>hope mural</title>
+<title>hurt mural</title>
 
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name=color-scheme content="dark">
 <meta name=theme-color content="yellow">
-<meta name=description content="hope mural">
+<meta name=description content="your hurt izza mussel">
 <link rel="stylesheet" href="hope.css">
 <link rel="license" href="UNLICENSE.txt" hreflang="en">
 <link rel="help" href="https://webmural.dev/hope">
@@ -16,8 +16,8 @@
 <nav>
   <blockquote>
     <a href="https://webmural.com/license" hreflang="en">anyone's</a>
-    <a href="https://webmural.com">free</a>
+    <a href="https://webmural.com/airwaves">free</a>
     <a href="https://webmural.com/hope">hope</a>
-    <a href="https://webmural.dev/hope">code</a>
+    <a href="https://webmural.com">home</a>
   </blockquote>
 </nav>
