--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="license" href="UNLICENSE.txt" hreflang="en">
 <link rel="help" href="https://webmural.dev/hope">
 
-<h1>hope</h1>
+<h1>hurt</h1>
 <nav>
   <blockquote>
     <a href="https://webmural.com/license" hreflang="en">anyone's</a>
